@@ -1,6 +1,12 @@
 ==============
 Changelog
 ==============
+2019-06-24 (verson 1.4):
+    * adding vector layers sublayers adds all sublayers
+    * map canvas context menu "Focus on Spatial Extent" will hide maps without time series data for the current spatial extent
+    * added several convenience function to TimeSeriesViewer object
+    * updated SpectralLibraryViewer
+
 2019-06-12 (version 1.3):
     * fixed #99: opening example closes QGIS on linux
     * fixed #96 and #99 : docutils not installed error when showing rst/md content
